fix(info): ensure button dimensions are set for showing dialog
This fix applies to the secondary/side toolbar only. The info
dialog can become misaligned on automatic open at meeting start
when the user triggers a mousemove to automatically show the
toolbar. This causes an additional earlier re-render to fire
during meeting UI bootstrap, so the info dialog will try to
display before the toolbar display is set. This can be worked
around for the secondary toolbar by setting the height/width
of the button container so popper can position the info dialog
relative to the button.

This does not resolve the issue for the primary/top toolbar.

--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -74,13 +74,10 @@
         z-index: $zindex1;
         display: inline-block;
         font-size: $toolbarFontSize;
-        height: $defaultToolbarSize;
         line-height: $defaultToolbarSize;
-        position: relative;
         text-align: center;
         top:0px;
         vertical-align: middle;
-        width: $defaultToolbarSize;
 
         &_hangup {
             color: $hangupColor;
@@ -127,6 +124,18 @@
                 cursor: default;
             }
         }
+    }
+
+    /**
+     * Ensure child inline dialogs are positioned relative to the buttons that
+     * triggers their opening. Set dimensions so that the dialogs are positioned
+     * correctly even before the toolbar is ready for display.
+     */
+    .button,
+    .toolbar-button-with-dialog {
+        height: $defaultToolbarSize;
+        position: relative;
+        width: $defaultToolbarSize;
     }
 
     /**
